src/app/components/BuilderClasses/BuilderClasses.css
.tw-builder__settings-classes{
    display: flex;
    flex-direction: column;
    gap: 5px;
    position: relative;
}
.tw-builder__settings-id{
    font-size: var(--font-size-mini);
    font-weight: var(--font-weight);
    letter-spacing: var(--letter-spacing-negative);
    color: var(--shadow-color);
    background-color: var(--builder-background);
    border-radius: 5px;
    padding: 5px;
    cursor: pointer;
}
.tw-builder__settings-classes-selected{
    display: flex;
    flex-direction: row;
    gap: 5px;
    flex-wrap: wrap;
    width: 100%;
}
.tw-builder__settings-class{
    display: flex;
    flex-direction: row;
    gap: 5px;
    align-items: center;
    background-color: var(--builder-background);
    border-radius: 5px;
    padding: 5px;
    cursor: pointer;
    position: relative;
}
.tw-builder__settings-class-name{
    font-size: var(--font-size-mini);
    font-weight: var(--font-weight);
    letter-spacing: var(--letter-spacing-negative);
    color: var(--shadow-color);
}
.tw-builder__settings-class-remove{
    position: absolute;
    right: -4px;
    top: -4px;
    cursor: pointer;
    opacity: 0;
    font-size: 7px;
    font-weight: var(--font-weight);
    letter-spacing: var(--letter-spacing-negative);
    color: var(--panels-background);
    background-color: rgba(255, 0, 0, 0.428);
    padding: 1px 2px;
    border-radius: 100%;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 10px;
    width: 10px;
}
.tw-builder__settings-class:hover .tw-builder__settings-class-remove{
    opacity: 1;
}

.tw-builder__settings-classes-pool {
    position: absolute;
    top: 30px;
    left: 0;
    width: 100%;
    height: auto;
    background-color: var(--builder-background);
    z-index: 2;
    padding: 10px;
    border-radius: 5px;
    display: flex;
    flex-direction: column;
    gap: 5px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    border: 1px solid var(--border-light-color);
}
.tw-builder__settings-classes-searcher {
    width: 100%;
    height: 25px;

}
.tw-builder__settings-classes-search {
    width: 100%;
    height: 100%;
    border-radius: 5px;
    border: none;
    padding: 5px;
    background-color: var(--panels-background);
    color: var(--shadow-color);
    font-size: var(--font-size-small);
    font-weight: var(--font-weight);
    letter-spacing: var(--letter-spacing-negative);
}
.tw-builder__settings-classes-search::placeholder {
    color: var(--body-light-color);
}
.tw-builder__settings-classes-search:focus {
    outline: none;
}

.tw-builder__settings-classes-item{
    display: none;
} 
.tw-builder__settings-classes-item:hover{
    background-color: var(--panels-background);
    color: var(--builder-color);
    font-weight: var(--font-weight-bold);
}
.tw-builder__settings-classes-item:has(.tw-builder__settings-classes-item-name){
    cursor: pointer;
    padding: 2px;
    border-radius: 5px;
    height: 20px;
    display: flex;
    align-items: center;
}
.tw-builder__settings-classes-item-name{
    color: var(--subtitle-color);
    font-size: var(--font-size-mini);
    font-weight: var(--font-weight);
    letter-spacing: var(--letter-spacing-negative);
}

.tw-builder__settings-classes-item--empty{
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
   padding-top: 10px;
}
.tw-builder__settings-classes-item--empty .tw-builder__settings-classes-item-name{
    color: #0099FE;
    font-size: var(--font-size-mini);
    font-weight: var(--font-weight);
    letter-spacing: var(--letter-spacing-negative);
}

.tw-builder__settings-classes-item:has(.tw-builder__settings-classes-item-name) + .tw-builder__settings-classes-item--empty{
    display: none;
}

